theme/src/sass/partials/navbar.scss
$navbar-padding: 10px;

.navbar-wrapper {
  $_bg: #4648af;

  background-color: $_bg;
  top: 0;
  width: 100%;
  z-index: 1000;

  &.scrolled {
    background-color: rgba(85, 51, 255, 0.92) !important;
    position: fixed;
  }

  &.toggled {
    @include mobile-tablet {
      padding-bottom: 200px !important;
    }
  }
}

// Overriding BS4 navbar.
.navbar {
  background-color: transparent;
  font-family: $heading-font;
  max-width: 1220px;
  margin: 0 auto;
  padding: $navbar-padding 0;
  z-index: 1001;

  & .navbar-brand img {
    width: 180px;

    @include desktop {
      width: 220px;
    }
  }

  & .navbar-collapse {
    // Align items at right.
    justify-content: flex-end;

    @include desktop {
      margin-top: 4px;
    }

    &.collapsing {
      visibility: hidden;
    }

    &.show {
      padding-bottom: 40px;
      padding-top: 40px;
    }
  }

  // Override
  & .navbar-toggler {
    background-color: transparent;
    border: 2px solid #fff;
    font-size: 14px;
    padding: 8px 16px;
  }

  & .navbar-custom-text {
    color: #fff;
    font-weight: bold;
    font-size: 12px;
    font-family: sans-serif;
  }

  // Override
  & .nav-link {
    $padding-x: 16px;
    $padding-y: 8px;

    color: #fff !important;
    font-size: 16px;
    padding: $padding-y $padding-x !important;
    margin: 0 4px;

    @include desktop {
      &:hover {
        text-decoration: underline;
      }
    }

    &.active {
      $border: 2px;

      border: $border solid #fff;
      border-radius: 40px;
      padding: ($padding-y - $border) ($padding-x - $border) !important;
    }

    &--last {
      @include desktop {
        &:last-child {
          padding-right: 20px;
        }
      }
    }
  }
}

